Added a simple logo and dark mode button on the navbar

--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
     <body>
         <header>
             <nav class="navbar">
+                <!-- Logo Placement -->
+                <div class="logo">Imali X</div>
                 <!-- Hamburger icon for mobile menu -->
-                 <div class="hamburger"></div>
-                 <ul class="navbar-links">
+                <div class="hamburger"></div>
+                <ul class="navbar-links">
                     <li class="nav-item"><a href="#home">Home</a></li>
                     <li class="nav-item"><a href="#features">Features</a></li>
                     <li class="nav-item"><a href="#about">About Us</a></li>
                     <li class="nav-item"><a href="#services">Services</a></li>
                     <li class="nav-item"><a href="#contact">Contact Us</a></li>
-                 </ul>
+                </ul>
+
+                <!-- Dark Mode Toggle -->
+                <div class="dark-mode-toggle">
+                    <input type="checkbox" id="dark-mode-checkbox">
+                    <label for="dark-mode-checkbox">🌙</label>
+                </div>
             </nav>
         </header>
 
