Added a hero section with dark mode styling

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Marketing of Imali X</title>
+        <title>Imali X - Your Bank, Simplified</title>
         <link rel="stylesheet" href="./css/styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <nav class="navbar">
+                <div class="progress-bar" id="progressBar"></div>
                 <!-- Logo Placement -->
                 <div class="logo">Imali X</div>
                 <!-- Hamburger icon for opening menu -->
@@ -47,6 +48,17 @@
 
         <!-- Main Content Section -->
         <main>
+            <!-- Hero Section -->
+            <section class="hero-section">
+                <div class="hero-content">
+                    <img src="./assets/images/savings.png" alt="Imali X Logo" class="hero-logo">
+                    <h1 class="hero-headline">Your Bank, Simplified</h1>
+                    <p class="hero-subheadline">A modern banking experience built for today’s digital world.</p>
+                    <button id="learn-more" class="learn-more-button">Learn More</button>
+                </div>
+                <!-- Scroll Indicator -->
+                <div class="scroll-indicator">&#8595;</div>
+            </section>
 
         </main>
 
