Added limited offer display counter

--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
                     <img src="./assets/images/savings.png" alt="Imali X Logo" class="hero-logo">
                     <h1 class="hero-headline">Your Bank, Simplified</h1>
                     <p class="hero-subheadline">A modern banking experience built for today’s digital world.</p>
+
+                    <!-- Offer Message -->
+                    <div class="offer-message">
+                        Hurry! Limited-Time Offer Ends In:
+                    </div>
+
+                    <!-- Countdown Timer -->
+                    <div id="countdown-timer" class="countdown-timer">
+                        <span id="days">00</span> Days 
+                        <span id="hours">00</span> Hours 
+                        <span id="minutes">00</span> Minutes 
+                        <span id="seconds">00</span> Seconds
+                    </div>
                     <button id="learn-more" class="learn-more-button">Learn More</button>
                 </div>
                 <!-- Scroll Indicator -->
