Added a features section with fade-in effect

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Imali X - Your Bank, Simplified</title>
         <link rel="stylesheet" href="./css/styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <header>
@@ -80,6 +81,27 @@
                 </div>
                 <!-- Scroll Indicator -->
                 <!-- <div class="scroll-indicator">&#8595;</div> -->
+            </section>
+
+            <section id="features" class="features-section">
+                <h2 class="section-title">Our Key Features</h2>
+                <div class="features-container">
+                    <div class="feature-card fade-in">
+                        <i class="fas fa-mobile-alt feature-icon"></i>
+                        <h3>Mobile Banking</h3>
+                        <p>Manage your finances on the go with our user-friendly app.</p>
+                    </div>
+                    <div class="feature-card fade-in">
+                        <i class="fas fa-shield-alt feature-icon"></i>
+                        <h3>Secure Transactions</h3>
+                        <p>Experience top-tier security and peace of mind with every transaction.</p>
+                    </div>
+                    <div class="feature-card fade-in">
+                        <i class="fas fa-clock feature-icon"></i>
+                        <h3>24/7 Support</h3>
+                        <p>Our support team is available anytime you need assistance.</p>
+                    </div>
+                </div>
             </section>
 
         </main>
