--- a/index.html
+++ b/index.html
@@ -104,6 +104,31 @@
                 </div>
             </section>
 
+            <section id="gallery" class="image-gallery">
+                <h2 class="section-title">Our Gallery</h2>
+                <div class="gallery-container">
+                   <img
+                      data-src="./assets/images/finance_app.jpg"
+                      src="./assets/images/finance_app.jpg"
+                      alt="Feature 1"
+                      class="lazy-load"
+                   />
+                   <img
+                      data-src="./assets/images/secure_transactions.jpg"
+                      src="./assets/images/secure_transactions.jpg"
+                      alt="Feature 2"
+                      class="lazy-load"
+                   />
+                   <img
+                      data-src="./assets/images/customer_service.jpg"
+                      src="./assets/images/customer_service.jpg"
+                      alt="Feature 3"
+                      class="lazy-load"
+                   />
+                   <!-- Add more images -->
+                </div>
+             </section>
+
         </main>
 
         <script src="./js/script.js"></script>
