--- a/index.html
+++ b/index.html
@@ -109,25 +109,32 @@
                 <div class="gallery-container">
                    <img
                       data-src="./assets/images/finance_app.jpg"
-                      src="./assets/images/finance_app.jpg"
+                      src="./assets/images/placeholder-image.jpg"
                       alt="Feature 1"
                       class="lazy-load"
                    />
                    <img
                       data-src="./assets/images/secure_transactions.jpg"
-                      src="./assets/images/secure_transactions.jpg"
+                      src="./assets/images/placeholder-image.jpg"
                       alt="Feature 2"
                       class="lazy-load"
                    />
                    <img
                       data-src="./assets/images/customer_service.jpg"
-                      src="./assets/images/customer_service.jpg"
+                      src="./assets/images/placeholder-image.jpg"
                       alt="Feature 3"
                       class="lazy-load"
                    />
                    <!-- Add more images -->
                 </div>
              </section>
+
+             <!-- Lightbox Modal -->
+            <div id="lightbox" class="lightbox">
+                <span class="lightbox-close">&times;</span>
+                <img id="lightbox-img" class="lightbox-img" alt="Lightbox View">
+                <div class="lightbox-caption" id="lightbox-caption"></div>
+            </div>
 
         </main>
 
