Implemented a responsive and engaging CTA popup

--- a/index.html
+++ b/index.html
@@ -136,6 +136,15 @@
                 <div class="lightbox-caption" id="lightbox-caption"></div>
             </div>
 
+            <div id="cta-popup" class="popup hidden">
+                <div class="popup-content">
+                    <span class="popup-close">&times;</span>
+                    <h2>Special Offer Just for You!</h2>
+                    <p>Sign up now and get 20% off your first transaction.</p>
+                    <button class="popup-btn">Sign Up Now</button>
+                </div>
+            </div>
+
         </main>
 
         <script src="./js/script.js"></script>
