Implemented Multiple Popup Variant through different cycles

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
             <div id="cta-popup" class="popup hidden">
                 <div class="popup-content">
                     <span class="popup-close">&times;</span>
-                    <h2>Special Offer Just for You!</h2>
-                    <p>Sign up now and get 20% off your first transaction.</p>
+                    <h2 id="popup-title">Special Offer Just for You!</h2>
+                    <p id="popup-message">Sign up now and get 20% off your first transaction.</p>
                     <button class="popup-btn">Sign Up Now</button>
                 </div>
             </div>
